# tipcoin-program

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/tipcoin/: Cargo.toml
programs/tipcoin/src/: lib.rs
programs/tipcoin/tests/: tipcoin.ts
scripts/: init-config.ts  set-fees.ts
src/: lib.rs
