[package]
name = "tipcoin"
version = "0.1.0"
edition = "2021"

[lib]
name = "tipcoin"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
cpi = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
bincode = "1.3"
